force-app/main/default/objects/Knowledge_Version__c/Knowledge_Version__c.object-meta.xml
<CustomObject>
    <label>Knowledge Version</label>
    <nameField>
        <displayFormat>KV-{0000}</displayFormat>
        <label>Knowledge_Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Version</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>