force-app/main/default/objects/Knowledge_Version__c/fields/isLatestVersion__c.field-meta.xml
<CustomField>
    <fullName>isLatestVersion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLatestVersion</label>
    <type>Checkbox</type>
</CustomField>