force-app/main/default/objects/Knowledge_Version__c/fields/isOutdated__c.field-meta.xml
<CustomField>
    <fullName>isOutdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOutdated</label>
    <type>Checkbox</type>
</CustomField>