force-app/main/default/objects/Knowledge_Version__c/fields/KBArticleId__c.field-meta.xml
<CustomField>
    <fullName>KBArticleId__c</fullName>
    <label>KBArticleId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>