force-app/main/default/objects/Knowledge_Version__c/fields/KBArticleVersionId__c.field-meta.xml
<CustomField>
    <fullName>KBArticleVersionId__c</fullName>
    <externalId>true</externalId>
    <label>KBArticleVersionId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>