force-app/main/default/objects/Knowledge_Version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Article_Number__c</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>KBArticleId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Online</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>